# tensorrt-deploy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build_with_tensorrt.sh
master/: CMakeLists.txt  config_env.cpp  config_env.h  main.cpp
master/common/: common.cpp  common.h  config.cpp  config.h  config_helper.h  logging.cpp  logging.h  md5.cpp  md5.h  queue.h  timer.cpp  timer.h  xf_struct.h
master/config/: config.ini  master_config.ini
master/httpserver/: handler.cpp  handler.h  router.cpp  server.cpp  server.h  uri_cb.h
master/inference/: infer_interface.h  inference.cpp  inference.h  yolo_infer.cpp  yolo_infer.h
master/template/: versin.h.in
master/tensorrt/: buffers.cpp  buffers.h  builder.cpp  builder.h  cuda_tools.cpp  cuda_tools.h  engine_buffers.cpp  engine_buffers.h  generic_buffer.h  infer.cpp  infer.h  tensor_buffer.cpp  tensor_buffer.h  trt_logger.cpp  trt_logger.h  trt_utils.cpp  trt_utils.h
tools/: generate.py  modify.py  read_onnx.py
